--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.12.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>5.3.10</version>
+    </dependency>
   </dependencies>
 
   <build>
